# pqc-readiness-lab

./: .gitignore  CI_OPTIMIZATION_SUMMARY.md  Dockerfile  LICENSE  MILESTONE_1_SUMMARY.md  README.md  SIMPLE_IS_BETTER.md  SIMPLIFICATION_SUMMARY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
c/: CMakeLists.txt
c/dsa_demo/: dsa_demo.c
c/kem_demo/: kem_demo.c
docs/: arch.md
scripts/: build_liboqs.sh
src/pqc_lab/: __init__.py  cli.py  config.py  lib.py  py.typed
tests/: test_smoke.py
